--- a/webConverter/index.html
+++ b/webConverter/index.html
@@ -8,6 +8,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <input type="file"></input>
+        <div id="dropzone" style="width:300px;height:150px;border:2px dashed gray;display:flex;align-items:center;justify-content:center;">
+          Drop ZIP file here
+        </div>
+        <button id="submit">submit</button>
+        <canvas id="drawArena"> </canvas>
     </body>
+    <script type="module" src="script.mjs"></script>
 </html>
