pivot to downloading from scratch API

--- a/webConverter/index.html
+++ b/webConverter/index.html
@@ -13,6 +13,10 @@
         </div>
         <button id="submit">submit</button>
         <canvas id="drawArena"> </canvas>
-    </body>
+     <script src="https://cdn.jsdelivr.net/npm/@turbowarp/sbdl@5.0.1/lib/bundle-standalone.min.js"></script>
+    <script>
+      // .sb downloader is exported as `SBDL` on window
+      // See the "Standalone version" below for more information specifically about the standalone version
+    </script>   </body>
     <script type="module" src="script.mjs"></script>
 </html>
